<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.epicodus.madlibs.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Mad Libs"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/mainTitle"
        android:textSize="45sp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/nounEditText"
        android:hint="Noun"
        android:ellipsize="start"
        android:gravity="center_horizontal"
        android:layout_alignRight="@+id/mainTitle"
        android:layout_alignEnd="@+id/mainTitle"
        android:layout_alignLeft="@+id/mainTitle"
        android:layout_alignStart="@+id/mainTitle"
        android:layout_below="@+id/mainTitle" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/adjectiveEditText2"
        android:hint="Adjective"
        android:ellipsize="start"
        android:gravity="center_horizontal"
        android:layout_below="@+id/nounEditText"
        android:layout_alignRight="@+id/nounEditText"
        android:layout_alignEnd="@+id/nounEditText"
        android:layout_alignLeft="@+id/nounEditText"
        android:layout_alignStart="@+id/nounEditText" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/verbEditText3"
        android:hint="Verb"
        android:ellipsize="start"
        android:gravity="center_horizontal"
        android:layout_below="@+id/adjectiveEditText2"
        android:layout_alignLeft="@+id/adjectiveEditText2"
        android:layout_alignStart="@+id/adjectiveEditText2"
        android:layout_alignRight="@+id/adjectiveEditText2"
        android:layout_alignEnd="@+id/adjectiveEditText2" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Submit"
        android:id="@+id/submitButton"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
